# tessa

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  README.md  configure.ac
contrib/debian/: club-qt.desktop  control
contrib/debian/manpages/: club-qt.1  club.conf.5  clubd.1
contrib/devtools/: README.md
contrib/init/: clubd.conf  clubd.init  clubd.openrc  clubd.service
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/seeds/: makeseeds.py
contrib/spendfrom/: spendfrom.py
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  translation_process.md  unit-tests.md  zmq.md
share/: genbuild.sh
share/qt/: Info.plist.in
src/: CMakeLists.txt  account.h  accumulatorcheckpoints.cpp  accumulatorcheckpoints.h  accumulatormap.cpp  accumulatormap.h  accumulators.cpp  accumulators.h  addressbookdata.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bignum.h  block.cpp  blockdisk.h  blockfileinfo.h  blocksignature.cpp  blocksignature.h  blockundo.cpp  blockundo.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h.in  club-config.h.in  club-tx-res.rc  (+133 more)
src/bls/: CMakeLists.txt  aggregationinfo.cpp  aggregationinfo.hpp  bls.cpp  bls.hpp  blsprivatekey.cpp  blsprivatekey.hpp  blspublickey.cpp  blspublickey.hpp  blssignature.cpp  blssignature.hpp  blsutil.hpp  chaincode.cpp  chaincode.hpp  extendedprivatekey.cpp  extendedprivatekey.hpp  extendedpublickey.cpp  extendedpublickey.hpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hashargon2d.h
src/ecdsa/: blocksignature.cpp  blocksignature.h  key.cpp  key.h  pubkey.cpp  pubkey.h
src/liblmdb/: CMakeLists.txt
src/libzerocoin/: Accumulator.cpp  Accumulator.h  AccumulatorAndProofParams.h  AccumulatorProofOfKnowledge.cpp  AccumulatorProofOfKnowledge.h  AccumulatorWitness.cpp  AccumulatorWitness.h  CMakeLists.txt  CoinSpend.cpp  CoinSpend.h  Commit.h  Commitment.h  CommitmentProofOfKnowledge.cpp  CommitmentProofOfKnowledge.h  Denominations.cpp  Denominations.h  IntegerGroupParams.h  IntegerMod.cpp  IntegerMod.h  ModulusType.h  ParamGeneration.cpp  ParamGeneration.h  PrivateCoin.cpp  PrivateCoin.h  PublicCoin.h  SerialNumberGroupParams.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  SpendType.h  ZerocoinDefines.h  ZerocoinParams.cpp  ZerocoinParams.h  paramgen.cpp
src/primitives/: block.cpp  block.h  deterministicmint.cpp  deterministicmint.h  transaction.cpp  transaction.h  zerocoin.cpp  zerocoin.h
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  club.cpp  club_locale.qrc  clubstrings.cpp  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  (+74 more)
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  tradingdialog.ui  zerocontroldialog.ui
src/qt/locale/: club_en.ts  tessa_en.ts  tessa_en_US.ts
src/qt/res/: tessa-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
src/relic/: CMakeLists.txt
src/relic/cmake/: arch.cmake  bn.cmake  cp.cmake  eb.cmake  ec.cmake  ed.cmake  ep.cmake  fb.cmake  fp.cmake  fpx.cmake  md.cmake  pp.cmake  rand.cmake
src/rpc/: blockchain.cpp  client.cpp  client.h  dump.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h  wallet.cpp
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: configure.ac
src/support/: cleanse.h  lockedpool.cpp
src/test/: CMakeLists.txt  Checkpoints_tests.cpp  accounting_tests.cpp  arith_uint256_tests.cpp  base58_tests.cpp  benchmark_zerocoin.cpp  bloom_tests.cpp  getarg_tests.cpp  key_tests.cpp  libzerocoin_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  scheduler_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_club.cpp  test_zerocoin.cpp  torcontrol_tests.cpp  transaction_tests.cpp  tutorial_zerocoin.cpp  univalue_tests.cpp  util_tests.cpp  zerocoin_denomination_tests.cpp  zerocoin_implementation_tests.cpp  zerocoin_transactions_tests.cpp
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  wallet.cpp  wallet.h  wallet_functions.cpp  wallet_functions.h  wallet_hdr.cpp  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h  walletkey.h  wallettx.cpp  wallettx.h  zerowallet.cpp  zerowallet.h
src/zmq/: zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp
